fixing width main wrap

--- a/static/css/style.scss
+++ b/static/css/style.scss
@@ -69,8 +69,8 @@ body{
   position:relative;
   background:white;
   z-index:1;
-  margin-left:auto;
-  margin-right:auto;
+  margin-left:10px;
+  margin-right:10px;
 }
 }
 
